# risc0-sparql-poc

./: Architecture.md  Cargo.toml  README.md  receipt.json
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: blank_node.rs  check.rs  i.rs  lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
res/: example.json  licenseVC.jsonld  profile.ttl  query.sparql  windsurf.nq
