[workspace]
resolver = "2"
members = ["host", "methods", "core"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true


[patch.crates-io]
oxrdf = { git = "https://github.com/jeswr/oxigraph", rev = "e59dc3c61eb03a088f760ba241fbc04b20d061d5" }
oxttl = { git = "https://github.com/jeswr/oxigraph", rev = "e59dc3c61eb03a088f760ba241fbc04b20d061d5" }