[package]
name = "json-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
json = "0.12.4"
risc0-zkvm = { version = "1.2.0" }
serde = "1.0"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
rdf-canon = "0.15.1"
oxrdf = "0.2.4"
oxttl = "0.1.5"
spareval = "0.1.0"
spargebra = "0.3.4"
oxsdatatypes = "0.2.2"
