[package]
name = "json-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
json = "0.12.4"
risc0-zkvm = { version = "1.2.0" }
serde = "1.0"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
rdf-canon = "0.15.1"
oxrdf = { version = "0.2.4", features = ["rdf-star"] }
oxttl = { version = "0.1.5", features = ["rdf-star"] }
spareval = { version = "0.1.0", features = ["rdf-star"] }
spargebra = { version = "0.3.4", features = ["rdf-star"] }
