[package]
name = "json-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
json = "0.12.4"
risc0-zkvm = { version = "1.2.0" }
serde = "1.0"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
oxrdf = { git = "https://github.com/jeswr/oxigraph.git", rev = "b32b1f3", features = ["rdf-star", "serde-unvalidated"] }
oxttl = { git = "https://github.com/jeswr/oxigraph.git", rev = "b32b1f3", features = ["rdf-star"] }
spareval = { git = "https://github.com/jeswr/oxigraph.git", rev = "b32b1f3", features = ["rdf-star"] }
spargebra = { git = "https://github.com/jeswr/oxigraph.git", rev = "b32b1f3", features = ["rdf-star"] }
sophia_jsonld = "0.9.0"
serde_json = "1.0.139"
thiserror = "2.0.11"
serde_test = "1.0.177"
