[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.2.0" }

[package.metadata.risc0]
methods = ["guest"]

[patch.crates-io]
oxrdf = { git = "https://github.com/jeswr/oxigraph", rev = "e59dc3c61eb03a088f760ba241fbc04b20d061d5" }
oxttl = { git = "https://github.com/jeswr/oxigraph", rev = "e59dc3c61eb03a088f760ba241fbc04b20d061d5" }
