[package]
name = "rdf_contains_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
json = "0.12.4"
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
json-core = { path = "../../core" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[patch.crates-io]
oxrdf = { git = "https://github.com/jeswr/oxigraph", rev = "e59dc3c61eb03a088f760ba241fbc04b20d061d5" }
oxttl = { git = "https://github.com/jeswr/oxigraph", rev = "e59dc3c61eb03a088f760ba241fbc04b20d061d5" }